# temporal_gnn_network_log_data

./: .env.example  .gitignore  .gitmodules  Pipfile  build_neighbor_finder.sh  convert_local.py  main.py  noisy_test.py  requirements.txt  run_noisy_tests.sh  run_workload_preds.sh  test  test_noisy_dataset.py
cpp_libs/neighbor_finder/: CMakeLists.txt  neighbor_finder.cpp  neighbor_finder_wrapper.cpp  test_neighbor_finder.cpp  thread_pool.h
neighbor_finder/: CMakeLists.txt  neighbor_finder.cpp  neighbor_finder.h  neighbor_finder_wrapper.cpp  test_neighbor_finder.cpp  thread_pool.h
notebooks/: Artificial_Worklaod_Gen.ipynb  dataset_visualization.ipynb  label_visualization.ipynb  microservice_exploration.ipynb  noise_test_visualization.ipynb  noisify_dataset.ipynb  plot_link_prediction_metrics.ipynb  plot_metrics.ipynb  plot_workload_pred_metrics.ipynb  plot_workload_pred_metrics_old.ipynb  plot_workload_pred_metrics_variations.ipynb  pred_visualization.ipynb  pred_visualization_18.ipynb  pred_visualization_25.ipynb  pred_visualization_25_4.ipynb  pred_visualization_25_reversed.ipynb  pred_visualization_25_reversed_4.ipynb  pred_visualization_4.ipynb  pred_visualization_specific_node.ipynb
src/: preprocess.py  preprocess_raw_files.py  utils.py
src/embedding/: precompute_temporal_embedding.py  train_self_supervised.py  train_supervised.py
src/embedding/tgn/evaluation/: evaluation.py
src/embedding/tgn/model/: temporal_attention.py  tgn.py  workload_prediction.py
src/embedding/tgn/modules/: embedding_module.py  memory.py
src/embedding/tgn/utils/: data_processing.py  embedding_buffer.py  utils.py
src/forecasting/: dataset.py  workload_pred_noisy_data.py  workload_prediction.py
src/forecasting/informer/data/: custom_max_scaler.py  custom_std_scaler.py  dataset.py
src/forecasting/informer/models/: attn.py  embed.py  model.py
src/forecasting/informer/utils/: metrics.py  timefeatures.py  tools.py
src/plot/: __init__.py
src/preprocess/: aggregate_dataframe.py  aggregate_filtered_dataframe.py  compute_graph.py  compute_seasonality.py  compute_time_statistics.py  custom_label_encoder.py  filter_data.py  filter_nodes.py  functions.py  generate_sampled_data_statistics.py  get_per_minute_dataframes.py  merge_data_files.py  preprocess_raw_files.py  produce_final_format_data.py  sample_data.py
